# litigation-data-mapper

./: .cruft.json  .gitignore  Dockerfile  Makefile  README.md  cli.py  cookiecutter.json  create_deployment.py  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci-cd.yml
.trunk/: configure-pyright.sh  trunk.yaml
.trunk/configs/: cspell.json
docs/setup/: developers.md  trunk.md
litigation-data-mapper/: cli.py
litigation_data_mapper/: cli.py  context.py  datatypes.py  extract_concepts.py  failures.py  fetch_litigation_data.py  flows.py  utils.py  wordpress.py  wordpress_data.py
litigation_data_mapper/.github/: CODEOWNERS
litigation_data_mapper/.trunk/: trunk.yaml
litigation_data_mapper/.trunk/configs/: cspell.json
litigation_data_mapper/enums/: collections.py  events.py
litigation_data_mapper/infra/: Pulumi.yaml  __main__.py
litigation_data_mapper/parsers/: collection.py  document.py  event.py  family.py  helpers.py  utils.py
scripts/: generate_redirects.py
tests/integration_tests/: test_cli.py
tests/integrations_tests/: test_commands.py  test_concepts.py
tests/unit_tests/: conftest.py  test_extract_concepts.py  test_flows.py  test_helpers.py  test_parsers_utils.py  test_utils.py  test_wrangle_data.py
tests/unit_tests/collection/: conftest.py  test_map_collections.py
tests/unit_tests/document/: conftest.py  test_map_document.py  test_map_documents.py  test_maps_document_data.py
tests/unit_tests/event/: test_map_events.py
tests/unit_tests/family/: conftest.py  test_map_families.py  test_map_global_family.py  test_map_us_family.py
tests/unit_tests/fetch_litigation_data/: test_fetch_litigation_data.py
{{cookiecutter.repo_name}}/: Makefile  README.md  cli.py  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: ci-cd.yml
{{cookiecutter.repo_name}}/.trunk/configs/: bandit.yaml
