[project]
authors = [{ name = "CPR-dev-team", email = "tech@climatepolicyradar.org" }]
license = { text = "Apache 2.0" }
requires-python = "<3.11,>=3.10"
dependencies = [
  "click<9.0.0,>=8.1.7",
  "requests>=2.20.0,<3.0.0",
  "pycountry<25.0.0,>=24.6.1",
  "prefect[slack]<4.0.0,>=3.3.1",
  "freezegun<2.0.0,>=1.5.1",
  "boto3>=1.35.87",
  "uv>=0.7.6",
  "boto3-stubs[s3]>=1.38.43",
  "moto[s3]>=5.1.6",
  "pytest-recording>=0.13.4",
]
name = "litigation-data-mapper"
version = "1.5.6"
description = ""

[project.scripts]
litigation_data_mapper = "litigation_data_mapper.cli:entrypoint"
litigation_data_mapper_with_vcr = "litigation_data_mapper.cli:entrypoint_with_vcr"
transform_single_case = "litigation_data_mapper.cli:transform_single_case"
sync_wordpress_to_s3 = "litigation_data_mapper.flows:sync_wordpress_to_s3"
get_deletions = "litigation_data_mapper.flows:get_deletions"
generate_redirects = "scripts.generate_redirects:main"

[dependency-groups]
dev = [
  "pytest<9.0.0,>=8.3.2",
  "cookiecutter<3.0.0,>=2.6.0",
  "pytest-asyncio<0.25.0,>=0.24.0",
  "pytest-env<1.1.6,>=1.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
env = ["AWS_ENV=sandbox"]
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
default-groups = ["dev"]

[tool.pyright]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
venv = ".venv"
