[tool.poetry]
name = "{{cookiecutter.package_name}}"
version = "0.1.0"
description = ""
authors = ["CPR-dev-team <tech@climatepolicyradar.org>"]
license = "Apache 2.0"
packages = [{ include = "{{cookiecutter.project_slug}}" }]

[tool.poetry.dependencies]
python = ">=3.10"
click = "^8.1.7"

[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_slug}}.cli:entrypoint"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
cookiecutter = "^2.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = ["**/__pycache__"]
pythonVersion = "3.10"
